[gd_scene load_steps=10 format=3 uid="uid://cof4otah4cygk"]

[ext_resource type="Script" path="res://scenes/vehicle/base_car.gd" id="1"]
[ext_resource type="AudioStream" path="res://resources/audio/engine/EngineSample.tres" id="4_kgrag"]
[ext_resource type="Script" path="res://scenes/vehicle/tire_models/brush_tire_model.gd" id="8"]
[ext_resource type="PackedScene" uid="uid://nelgdfamj8jh" path="res://scenes/vehicle/wheel_suspension.tscn" id="9"]

[sub_resource type="Curve" id="8"]
_data = [Vector2(0, 0.563636), 0.0, 0.0, 0, 0, Vector2(0.623809, 1), -0.303719, -0.303719, 0, 0, Vector2(0.872852, 0.663636), -1.61667, -1.8438, 0, 0, Vector2(1, 0.109091), -6.85253, 0.0, 0, 0]
point_count = 4

[sub_resource type="Resource" id="Resource_far6u"]
resource_local_to_scene = true
script = ExtResource("8")
tire_stiffness = 0.5
tire_width = 0.225

[sub_resource type="Resource" id="Resource_p7nij"]
resource_local_to_scene = true
script = ExtResource("8")
tire_stiffness = 0.5
tire_width = 0.225

[sub_resource type="Resource" id="Resource_qeh51"]
resource_local_to_scene = true
script = ExtResource("8")
tire_stiffness = 0.5
tire_width = 0.225

[sub_resource type="Resource" id="Resource_88hmf"]
resource_local_to_scene = true
script = ExtResource("8")
tire_stiffness = 0.5
tire_width = 0.225

[node name="RigidBodyCar" type="RigidBody3D" node_paths=PackedStringArray("engine_sound")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_layer = 2
mass = 700.0
script = ExtResource("1")
torque_curve = SubResource("8")
engine_moment = 0.2
engine_sound = NodePath("EngineSound")
gear_ratios = [3.5, 3.0, 2.5, 1.72, 1.2, 1.0]
gear_inertia = 0.09

[node name="Wheel_br" parent="." instance=ExtResource("9")]
tire_model = SubResource("Resource_far6u")

[node name="Wheel_bl" parent="." instance=ExtResource("9")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, 0, 1.5)
tire_model = SubResource("Resource_p7nij")

[node name="Wheel_fr" parent="." instance=ExtResource("9")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8, 0, -1.5)
tire_model = SubResource("Resource_qeh51")

[node name="Wheel_fl" parent="." instance=ExtResource("9")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, 0, -1.5)
tire_model = SubResource("Resource_88hmf")

[node name="EngineSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.09, 0.79)
stream = ExtResource("4_kgrag")
